la aplicacion ya es funcional se pueden ver los snipplets, no copiarlos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         <activity android:name=".AgregarCategoriaActivity"></activity>
         <activity android:name=".SnippletActivity"></activity>
         <activity android:name=".AdministrarNubeActivity"></activity>
+        <activity android:name=".EditSnippletActivity"></activity>
+
+
+
     </application>
 
 </manifest>
