se agrega el panel de preferencias, no funciona pero guarda y carga

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name=".AdministrarNubeActivity"></activity>
         <activity android:name=".EditSnippletActivity"></activity>
         <activity android:name=".CreateNewSnippletActivity"></activity>
+        <activity android:name=".PreferencesActivity"></activity>
+
 
 
 
