--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,7 @@
         <activity android:name=".EditSnippletActivity"></activity>
         <activity android:name=".CreateNewSnippletActivity"></activity>
         <activity android:name=".PreferencesActivity"></activity>
-
-
-
-
-
+        <activity android:name=".SearchResultActivity"></activity>
     </application>
 
 </manifest>
